리팩토링 3차 진행
리팩토링 3차 진행